# py-exonwebui

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py
examples/: locale_commands.txt  run.py  views.py  views_i18n.py
examples/flask/: run.py  views.py
examples/locale/: babel.cfg  messages.pot
examples/locale/ar/: INFO
examples/static/: webui
examples/static/i18n/: ar.js  ar.min.js  fr.js  fr.min.js
examples/templates/: data_grid.j2  data_grid.min.j2  data_grid.min.tpl  data_grid.tpl  input_form.j2  input_form.min.j2  input_form.tpl  lang_panel.tpl  loginpage.j2  loginpage.min.j2  loginpage.min.tpl  loginpage.tpl  mainboard.j2  mainboard.min.j2  mainboard.min.tpl  mainboard.tpl  option_panel.j2  option_panel.min.j2  option_panel.tpl  progress_loader.min.j2  progress_loader.min.tpl  progress_loader.tpl  query_builder.j2  query_builder.min.j2  query_builder.tpl  simpleboard.j2  simpleboard.min.j2  simpleboard.min.tpl  simpleboard.tpl  webui
examples/templates/i18n/: loginpage.j2  loginpage.min.j2  mainboard.j2  mainboard.min.j2  query_builder.j2  query_builder.min.j2  simpleboard.j2  simpleboard.min.j2
exonwebui/: __init__.py  macros.py  menuboard.py
exonwebui/macros/: __init__.py  basic.py  datagrids.py  forms.py
exonwebui/static/css/: webui.css  (+9 more)
exonwebui/templates/: html.tpl  menuboard.tpl  simpleboard.tpl  simplepage.tpl
requirements/: dev.txt
scripts/: build.sh  minify_templates.py  release.sh  setup_dev.sh
src/exonwebui/: __init__.py  ext_menuboard.py  menuboard.py
(+119 files in other folders)
